First solution to negative priority problem

--- a/priorities.html
+++ b/priorities.html
@@ -64,7 +64,9 @@
 
     function makeHigherPriority(name) {
       var priority = priorities.find(p => p.name === name)
-      priority.level = priority.level - 1
+      if (priority.level > 1){
+        priority.level = priority.level - 1
+      }
 
       drawPriorities()
     }
